# codex-quota-desk

./: CONTRIBUTING.md  PRIVACY.md  README.md  SECURITY.md  index.html  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: GITHUB-RELEASE-CHECKLIST.md  PROJECT-SUMMARY.md  RELEASE.md  RELEASE_TEMPLATE.md  TEST-MATRIX.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: codex.rs  lib.rs  main.rs
src/components/: DesignPlayground.tsx  QuotaCard.tsx
src/lib/: bridge.ts  format.test.ts  format.ts  i18n.ts  snapshots.test.ts  snapshots.ts
